assets/css/albums.scss
hgroup.galery-title{
	margin-bottom: 1em;
	padding-bottom: 1em;
	p a{
		// font-weight: bold;
		color: var(--hover-color);
		&:hover{
			text-decoration: underline;
		}
	}

	nav.categories{
		padding-bottom: 0rem;
		margin-bottom: 1rem;
		@media (min-width: 640px) {
			padding-bottom: 1rem;
		}
		@media (min-width: 1024px) {
			padding-bottom: 1.5rem;
		}
	}
}


section.galleries {
	// display: grid;
	// grid-template-columns: repeat(1, minmax(0, 1fr));
	// gap: 2rem 1.5rem;
	// max-width: 1280px;
  
	// @media (min-width: 640px) {
	//   grid-template-columns: repeat(2, minmax(0, 1fr));
	//   row-gap: 3rem;
	// }
  
	// @media (min-width: 1024px) {
	//   grid-template-columns: repeat(3, minmax(0, 1fr));
	// }
  
	display: flex;
	gap: 1em;
	// align-items: center;
	// align-content: center;
	justify-content: center;
	align-content: stretch;
	flex-wrap: wrap;
	// background-color: red;
  }

//   FIX related articles wrapping when the page had the handwritten font
// .handwritten-font section.galleries{
// 	// Original values
// 	// gap:1em;
// 	// padding-right: 1.5rem;
// 	// padding-left: 1.5rem;
// 	padding-right: 1.2rem;
// 	padding-left: 1.2rem;
// }

article.articles-content section.galleries a.card h2{
	font-size: 1.125rem !important;
}

// REFACTOR este nombre solo hace referencia a las cards de los albumes pequeños. Vendría bien "album-card"
.card{
	text-align: left;
	color: var(--text-1) !important;
	// flex: 0 0 200px;
	// flex: 0 0 clamp(200px, 400px, 90vmin);
	// flex: 0 0 clamp(200px, 400px, 20vw);
	// flex: 0 0 clamp(200px, 400px, 600px);
	// flex: 0 0 clamp(200px, 20%, 600px);
	// flex: 0 0 clamp(400px, 20%, 600px);
	// flex: 0 0 clamp(400px, 90%, 600px);
	// flex: 0 0 clamp(300px, 90%, 410px);
	flex: 0 0 clamp(300px, 90%, 400px);
	// flex: 0 0 clamp(95vmin, 400px, 90vmin);
	transition: all 1200ms;

	// & figure img{
	// 	transition: all 1s;
	// 	// margin-top: 100px;
	// 	// transition: all 200ms ease-in-out;
	// }
	
	& figure {
		box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.75);
		overflow: hidden;
		position: relative;
		// transition: all 200ms;
		img{
			transition: all .5s;
			// margin-top: 100px;
			// transition: all 200ms ease-in-out;
		}

		img.hover-cover-image{
			position: absolute;
		overflow: hidden;
		top: 0px;
		right: 0px;
		// z-index: -1;
		opacity: 0;

		}
	}

	// &:hover figure {
	// 	// transition: all 100ms;
	// 	transition: all 2s;
	// 	// transform: scale(1.03);
	// 	// filter: blur(3px);
	// 	img {
	// 		// transition: all 100ms;
	// 		transition: all 1.5s;
	// 		transform: scale(1.1);
	// 		// transform: scale(1.1) rotateZ(10deg);
	// 		// filter: blur(3px);
	// 		// filter: brightness(123%) contrast(167%);;
	// 		filter: brightness(107%) contrast(107%);
			
	// 	}
	// }

	&:hover {
		text-decoration: none !important;
		// transition: all 200ms;
		// transition: transform 200ms;
		// transition: box-shadow 20000ms;
		// transform: translateY(-10px);
		// transform: translateY(-5px);
		// transform: scale(1.05);
		div, p{
			transition: color 200ms;
			color: var(--hover-color) !important;
		}

		figure{
			transition: all .2s;

			// box-shadow: 0px 5px 9px 0px rgba(0,0,0,0.95);
			box-shadow: 0px 5px 11px 0px rgba(0,0,0,0.95);
			img {
				// transition: all 100ms;
				// transition: all .5s;
				transition: all .23s ease;
				// transform: scale(1.1);
				transform: scale(1.23);
				// transform: scale(1.1) rotateZ(10deg);
				// filter: blur(3px);
				// filter: brightness(123%) contrast(167%);;
				// filter: brightness(107%) contrast(107%);
				// filter: brightness(107%) contrast(107%) grayscale(100%) ;
				// filter: brightness(107%) contrast(107%) saturate(150%) ;
				// filter: brightness(107%) contrast(107%) saturate(120%) ;
				filter: brightness(107%) contrast(107%) saturate(113%) ;
				
			}
			
			.hover-cover-image{
				opacity: 1;
			}
		}

	}

}

nav.categories{
	gap: 0px;
	padding-bottom: 1rem;	
	margin-bottom: 1rem;

	ul{
		gap: 0px;
		li{
			margin-left: 5px;
		}
	}
	li{
		list-style: none;
	}
}

.category-tag{
	@extend .article-tag;
	color: var(--text-2) !important;
	// font-weight: 600;
	font-weight: bold;
	list-style: none;
	&:hover{
		text-decoration: none !important;
	}
}

.dark .card figure{
	transition-duration: .7s;
}
.dark .card:hover{
	div h2{
		transition-duration: .1s;
		@extend .bloom-text;
	}
	figure{
		transition-duration: .1s;
		@extend .bloom-box-shadow-album-card;
	}
}


.bloom-box-shadow-album-card{
	box-shadow: 
		0px 7px 7px -4px var(--hover-color, white),
		0px 0px 1px 0px color-mix(in srgb, var(--bloom-box-shadow-color, var(--hover-color)), white 40%),
		0px 0px 4px 0px var(--bright-col, var(--hover-color)),
		0px 0px 7px 2px var(--main-col, var(--hover-color)),
		0px 0px 47px -5px var(--bloom-box-shadow-color, var(--hover-color)),
		;
}


// FEATURED BIG
// REFACTOR album featured big
section.featured{
	transition-duration: .7s;


	a{
		text-decoration: none !important;
	}
	// h2{
	h2{
		// @extend .bloom-box-shadow-album-card;
		// @extend .bloom-shadow;
		transition-duration: .6s;

		text-shadow: $text-shadow-values2;
		// font-weight: 900;
		font-weight: var(--text-weight, 900);
		// font-weight: var(--text-weight, 700);
		color: white;

	}
	p{
		transition-duration: .6s;
	}

	// &:hover{
	// TODO :active al resto de :hover (para móbiles)
	&:hover, &:active{
		// color: var(--hover-color) !important;
		// h2::before{
		h2{
			// transition-duration: 1.2s;
			transition-duration: .7s;
			// content: "caca";
			// padding-left: 1em;
			padding-left: .5em;
		}
		p{
			text-decoration: none !important;
			color: var(--hover-color) !important;
			transition-duration: .5s;
			// padding-left: 3em;
			padding-left: 2em;
		}

		// @extend #article-title;
	}
}


.featured-gallery-big{
	// padding-top: 100px;
	// margin-top: 100px;
	// all: unset;
	margin: auto;

	display: flex;
	flex-direction: column;
	// width: 1300px;
	// width: 90vmin;
	// width: 100%;
	width: clamp(200px, 100%, 1300px);
	gap: 30px;
	text-align: left;
	h2, p{
		color: var(--text-1-dark) !important;
	}
	// h2, p{
		// text-decoration: none !important;
	// }

	// NEW IDEA HOVER
	// REFACTOR nombres variables - background-animation-time
	a{
		// transition-duration: 2s;
		// background-size: 100%;
		// background-size: 110%;
		transition-duration: var(--background-animation-time-unfocus, 2s);
		// background-position: var(--background-position, 50% 50%);
		background-position: var(--background-position, center);
		// background-position: var(--background-position, 0% 0%);
		background-size: var(--background-zoom, cover);
	}
	&:hover{
		a{
			// transition-duration: 5s;
			// transform: scale(3.0);
			// background-position: 0px 0px;
			// background-position: 50% 100%;
			// background-size: 200%;
			// background-size: 100%;
			transition-duration: var(--background-animation-time-hover, 5s);
			background-position: var(--background-hover-position, center);
			background-size: var(--background-zoom-2, cover);
		}
	}
}

